# kyro

./: Cargo.toml  LICENSE  README.md
.cargo/: config
assets/: input_bindings.ron  triangulation.ron
assets/shaders/compiled/: pos_norm_tex.vert.spv  pos_norm_tex_skin.vert.spv  shaded.frag.spv
assets/shaders/src/: pos_norm_tex.vert  shaded.frag
assets/triangulation/: edges.ron  points.ron
assets/triangulation/methods/: basic.ron
config/: display.ron
src/: character_systems.rs  chunk_system.rs  components.rs  low_poly_shader.rs  main.rs  marching_cubes.rs  matrix_3d.rs  perlin.rs  systems.rs  terrain.rs  visual_utils.rs
