[package]
name = "amethyst_physics_test"
version = "0.1.0"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.0", features = ["vulkan", "no-slow-safety-checks"]}
lazy_static = "1.4.0"
rand = "0.7.2"
amethyst_physics = "0.2.0"
amethyst_nphysics = "0.2.0"
derivative = "2.1.1"
glsl-layout = "0.3.2"
failure = "0.1.7"